--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #email{text-align:centre}
+        #phone{text-align:centre}
+        #address{text-align:centre}
+    </style>
 </head>
 <body>
    <h1>Email</h1>
-   <p><img src = "./email_icon.jpg" height = 12> email: sm.shohaib123@gmail.com </p>
-   <p><img src = "./phoneicon.png" height = 12> phone: +91-9665881159 </p>
-   <p><img src = "./Address_icon.png" height = 20> Address: Nadkarni Reviera Phase 2, UG-1,<br/>
+   <p id="email"><img src = "./email_icon.jpg" height = 12> email: sm.shohaib123@gmail.com </p>
+   <p id="phone"><img src = "./phoneicon.png" height = 12> phone: +91-9665881159 </p>
+   <p id="address"><img src = "./Address_icon.png" height = 20> Address: Nadkarni Reviera Phase 2, UG-1,<br/>
         Alto St.Cruz, Bambolim, Panjim, Goa. <br/>
         403202.
     </p>
