--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #email{text-align:centre}
-        #phone{text-align:centre}
-        #address{text-align:centre}
+        #document{text-align: center;}
+        #email{text-align:center;}
+        #phone{text-align:center;}
+        #address{text-align:center;}
     </style>
 </head>
 <body>
-   <h1>Email</h1>
+   <h1 id="document">Email</h1>
    <p id="email"><img src = "./email_icon.jpg" height = 12> email: sm.shohaib123@gmail.com </p>
    <p id="phone"><img src = "./phoneicon.png" height = 12> phone: +91-9665881159 </p>
    <p id="address"><img src = "./Address_icon.png" height = 20> Address: Nadkarni Reviera Phase 2, UG-1,<br/>
