--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-   <h1 id="document">Email</h1>
+   <h1 id="document">Contact Me!</h1>
    <p id="email"><img src = "./email_icon.jpg" height = 12> email: sm.shohaib123@gmail.com </p>
    <p id="phone"><img src = "./phoneicon.png" height = 12> phone: +91-9665881159 </p>
    <p id="address"><img src = "./Address_icon.png" height = 20> Address: Nadkarni Reviera Phase 2, UG-1,<br/>
